--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,10 @@ alembic==1.13.1
 celery==5.3.6
 apscheduler==3.10.4
 psycopg2-binary==2.9.9
+email-validator
+xgboost>=2.0.0
+lightgbm>=4.1.0
+scikit-learn>=1.3.2
+pandas>=2.1.4
+numpy>=1.26.2
+joblib==1.3.2
