fix: Update the logic of sync data that update scores immediately after the match ends

--- a/app.json
+++ b/app.json
@@ -27,7 +27,9 @@
       "permissions": [
         "android.permission.RECEIVE_BOOT_COMPLETED",
         "android.permission.VIBRATE",
-        "android.permission.SCHEDULE_EXACT_ALARM"
+        "android.permission.SCHEDULE_EXACT_ALARM",
+        "android.permission.INTERNET",
+        "android.permission.ACCESS_NETWORK_STATE"
       ]
     },
     "web": {
@@ -41,6 +43,11 @@
           "color": "#ffffff"
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "83a0aa68-2083-4174-8ce2-8e7d58d82fe1"
+      }
+    }
   }
 }
