--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.14.2",
     "axios": "^1.6.2",
-    "date-fns": "^3.0.6",
+    "date-fns": "^3.6.0",
     "expo": "~50.0.0",
     "expo-blur": "~12.9.2",
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
+    "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "~12.7.2",
     "expo-notifications": "~0.27.6",
     "expo-secure-store": "~12.8.1",
