--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "expo-blur": "~12.9.2",
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
-    "expo-image-picker": "^17.0.10",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-notifications": "~0.27.6",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.11.3",
     "react-native-reanimated": "~3.6.2",
